apps/aiostreams/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aiostreams
  labels:
    pod-security.kubernetes.io/enforce: privileged
