apps/aiostreams/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiostreams
  namespace: aiostreams
spec:
  selector:
    app: aiostreams
  ports:
    - port: 80
      targetPort: http
      name: http
