apps/aiostreams/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiostreams
  namespace: aiostreams
  annotations:
    cert-manager.io/cluster-issuer: lab-ca-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aiostreams.lab.internal
      secretName: aiostreams-tls
  rules:
    - host: aiostreams.lab.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aiostreams
                port:
                  name: http
